# eartraining-plugin

./: .editorconfig  .mise.toml  Cargo.toml  README.md
app/: .mise.toml  .prettierignore  .prettierrc.json  README.md  justfile  package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/app/: App.css  App.tsx
app/src/components/svg/: Wedge.tsx
app/src/config/: intervals.ts
app/src/features/interval-circle/components/: IntervalCircle.tsx  WedgeCircle.tsx
app/src/hooks/: useInterval.ts
app/src/utils/: geometry.ts  svg.ts
plugin/: Cargo.toml
plugin/src/: editor.rs  intervals.rs  lib.rs  note.rs
plugins/: Cargo.toml  README.md  justfile
plugins/plugin/src/: intervals.rs  lib.rs
plugins/sysex/: Cargo.toml
plugins/sysex/src/: lib.rs
plugins/tonic_relay/: Cargo.toml
plugins/tonic_relay/src/: lib.rs
