[package]
name = "tonic_relay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [] }
sysex = { path = "../sysex" }
